g pas ton temps bro

--- a/dawholePage/audio.html
+++ b/dawholePage/audio.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro&display=swap" rel="stylesheet" />
     <link href="audio.css" rel="stylesheet">
     <link href="../floatingBg.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="../icon.png">
     <title>Chromusic</title>
 </head>
 
@@ -30,10 +31,10 @@
                         <div>
                             <button class="btn btn-secondary" id="Previous">Previous</button>
                             <button class="btn btn-secondary" id="playPauseButton">Play/Pause</button>
-                            <button class="btn btn-secondary" id="Next">Previous</button>
+                            <button class="btn btn-secondary" id="Next">Next</button>
                         </div>
                         <div id="additionalParams" style="display: none;">
-                            <p>Todos les amigos Autres paramètres...</p>
+                            <p>Autres paramètres...</p>
                         </div>
                     </div>
                 </div>
