rename the rest my dude

--- a/popup.html
+++ b/popup.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="bootstrap.min.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro&display=swap" rel="stylesheet" />
-    <link href="playingRect.css" rel="stylesheet" />
-    <link href="floatingBg.css" rel="stylesheet">
+    <link href="css/playingRect.css" rel="stylesheet" />
+    <link href="css/floatingBg.css" rel="stylesheet">
     <title>Chromusic</title>
 </head>
 
