--- a/webPage/index.html
+++ b/webPage/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../bootstrap.min.css" crossorigin="anonymous" />
-    <script src="../jquery-1.12.4.min.js"></script>
-    <script src="../bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" crossorigin="anonymous" />
+    <script src="../bootstrap/jquery-1.12.4.min.js"></script>
+    <script src="../bootstrap/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro&display=swap" rel="stylesheet" />
-    <link href="audio.css" rel="stylesheet">
-    <link href="../floatingBg.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
+    <link href="../css/floatingBg.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../icon.png">
     <title>Chromusic</title>
 </head>
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <script src="audio.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
