je suis au boulot marcelin

--- a/webPage/index.html
+++ b/webPage/index.html
@@ -23,8 +23,6 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title">Chromusic</h1>
-                        <button type="button" class="btn btn-primary" id="settingsButton"><img class="gear"
-                                src="PepiconsPopGear.svg" alt="Settings" /></button>
                     </div>
                     <div class="modal-body">
                         <h5>Radio Phénix</h5>
@@ -33,8 +31,16 @@
                             <button class="btn btn-secondary" id="playPauseButton">Play/Pause</button>
                             <button class="btn btn-secondary" id="Next">Next</button>
                         </div>
-                        <div id="additionalParams" style="display: none;">
-                            <p>Autres paramètres...</p>
+                        <h5>Game of Role</h5>
+                        <h5>Daily playlist 1</h5>
+                        <h5>Daily playlist 2</h5>
+                        <h5>Daily playlist 3</h5>
+                        <hr>
+                        <div>
+                            <button type="button" class="btn btn-secondary" id="settingsButton">Settings</button>
+                            <div id="additionalParams" style="display: none;">
+                                <p>Autres paramètres...</p>
+                            </div>
                         </div>
                     </div>
                 </div>
