puree ca marche po

--- a/webPage/index.html
+++ b/webPage/index.html
@@ -25,16 +25,22 @@
                         <h1 class="modal-title">Chromusic</h1>
                     </div>
                     <div class="modal-body">
-                        <h5>Radio Phénix</h5>
                         <div>
-                            <button class="btn btn-secondary" id="Previous">Previous</button>
-                            <button class="btn btn-secondary" id="playPauseButton">Play/Pause</button>
-                            <button class="btn btn-secondary" id="Next">Next</button>
+                            <h5>Radio Phénix</h5>
+                            <button class="btn btn-secondary" id="phenixRadioPlayPauseButton">Play/Pause</button>
                         </div>
-                        <h5>Game of Role</h5>
-                        <h5>Daily playlist 1</h5>
-                        <h5>Daily playlist 2</h5>
-                        <h5>Daily playlist 3</h5>
+                        <div class="mt-2">
+                            <h5>Game of Role</h5>
+                        </div>
+                        <div class="mt-2">
+                            <h5>Daily playlist 1</h5>
+                        </div>
+                        <div class="mt-2">
+                            <h5>Daily playlist 2</h5>
+                        </div>
+                        <div class="mt-2">
+                            <h5>Daily playlist 3</h5>
+                        </div>
                         <hr>
                         <div>
                             <button type="button" class="btn btn-secondary" id="settingsButton">Settings</button>
@@ -42,13 +48,16 @@
                                 <p>Autres paramètres...</p>
                             </div>
                         </div>
+                        <hr>
+                        <p>Hello there, I'm Benjamin and you can see the code of this shit <a href="https://github.com/HaiseB/chromusic" target="_blank">here</a> :)</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/phenixRadio.js"></script>
 </body>
 
 </html>
