feat(RadioPhenix) : create link to mp3 flux + do some front adjustment

--- a/webPage/index.html
+++ b/webPage/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro&display=swap" rel="stylesheet" />
     <link href="main.css" rel="stylesheet">
     <link href="../css/floatingBg.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/x-icon" href="../icon.png">
     <title>Chromusic</title>
 </head>
@@ -26,8 +29,9 @@
                     </div>
                     <div class="modal-body">
                         <div>
-                            <h5>Radio Phénix</h5>
-                            <button class="btn btn-secondary" id="phenixRadioPlayPauseButton">Play/Pause</button>
+                            <button class="btn btn-secondary" id="phenixRadioPlayPauseButton">
+                                <i class="fas fa-play fa-fw"></i>&nbsp; Radio Phénix
+                            </button>
                         </div>
                         <div class="mt-2">
                             <h5>Game of Role</h5>
@@ -41,15 +45,15 @@
                         <div class="mt-2">
                             <h5>Daily playlist 3</h5>
                         </div>
-                        <hr>
                         <div>
                             <button type="button" class="btn btn-secondary" id="settingsButton">Settings</button>
                             <div id="additionalParams" style="display: none;">
                                 <p>Autres paramètres...</p>
+                                <hr>
+                                <p>Hello there, I'm Benjamin and you can see the code of this shit <a
+                                        href="https://github.com/HaiseB/chromusic" target="_blank">here</a> :)</p>
                             </div>
                         </div>
-                        <hr>
-                        <p>Hello there, I'm Benjamin and you can see the code of this shit <a href="https://github.com/HaiseB/chromusic" target="_blank">here</a> :)</p>
                     </div>
                 </div>
             </div>
