--- a/webPage/index.html
+++ b/webPage/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../bootstrap/vapor.bootstrap.min.css" crossorigin="anonymous" />
     <script src="../bootstrap/jquery-1.12.4.min.js"></script>
     <script src="../bootstrap/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro&display=swap" rel="stylesheet" />
@@ -36,14 +36,23 @@
                         <div class="mt-2">
                             <h5>Game of Role</h5>
                         </div>
-                        <div class="mt-2">
-                            <h5>Daily playlist 1</h5>
-                        </div>
-                        <div class="mt-2">
-                            <h5>Daily playlist 2</h5>
-                        </div>
-                        <div class="mt-2">
-                            <h5>Daily playlist 3</h5>
+
+                        <div class="mt-2 d-flex justify-content-between">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingThree">
+                                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Accordion Item #3
+                                  </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                  <div class="accordion-body">
+                                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                  </div>
+                                </div>
+                              </div>
+                            <div class="p-3">Daily playlist 1</div>
+                            <div class="p-3">Daily playlist 2</div>
+                            <div class="p-3">Daily playlist 3</div>
                         </div>
                         <div>
                             <button type="button" class="btn btn-secondary" id="settingsButton">Settings</button>
