feat : add a special page to handle spotify

--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,8 @@
             </div>
             <button class="btn btn-primary" id="openAudioPage">Open Audio Player web page</button>
             <button class="btn btn-primary mt-2" id="listenRadioPhenix">Listen Phenix Radio</button>
+            <button class="btn btn-primary mt-2" id="listenSpotifyPlaylist">Listen Spotify Playlist</button>
+            <button class="btn btn-primary mt-2" id="listenGameOfRole">Listen Game Of Role</button>
         </div>
     </div>
 </body>
