feat(selectTheme) : highlight image within form

--- a/webPage/index.html
+++ b/webPage/index.html
@@ -47,18 +47,18 @@
                                 <h5>Themes available</h5>
                                 <div class="row">
                                     <div class="col-6">
-                                        <img src="./assets/themes/minty.png" alt="Minty Theme" class="img-fluid">
+                                        <img id="mintyImage" src="./assets/themes/minty.png" alt="Minty Theme" class="img-fluid">
                                     </div>
                                     <div class="col-6">
-                                        <img src="./assets/themes/quartz.png" alt="Quartz Theme" class="img-fluid">
+                                        <img id="quartzImage" src="./assets/themes/quartz.png" alt="Quartz Theme" class="img-fluid">
                                     </div>
                                 </div>
-                                <div class="mt-1 row">
+                                <div class="row">
                                     <div class="col-6">
-                                        <img src="./assets/themes/solar.png" alt="Solar Theme" class="img-fluid">
+                                        <img id="solarImage" src="./assets/themes/solar.png" alt="Solar Theme" class="img-fluid">
                                     </div>
                                     <div class="col-6">
-                                        <img src="./assets/themes/vapor.png" alt="Vapor Theme" class="img-fluid">
+                                        <img id="vaporImage" src="./assets/themes/vapor.png" alt="Vapor Theme" class="img-fluid">
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-between mt-2">
