--- a/webPage/index.html
+++ b/webPage/index.html
@@ -14,6 +14,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/x-icon" href="../icon.png">
     <script src="js/main.js"></script>
+    <script src="js/settings.js"></script>
+    <script src="js/themeSelectorForm.js"></script>
     <script src="js/phenixRadio.js"></script>
     <title>Chromusic</title>
 </head>
