feat(settings) : add a direct link to settings

--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,7 @@
             <button class="btn btn-primary mt-2" id="listenRadioPhenix">Listen Phenix Radio</button>
             <button class="btn btn-primary mt-2" id="listenSpotifyPlaylist">Listen Spotify Playlist</button>
             <button class="btn btn-primary mt-2" id="listenGameOfRole">Listen Game Of Role</button>
+            <button class="btn btn-primary mt-2" id="openSettings">Open settings</button>
         </div>
     </div>
 </body>
