--- a/webPage/index.html
+++ b/webPage/index.html
@@ -39,9 +39,9 @@
                         <div class="mt-2">
                             <a href="./spotify.html?playing=GameOfRole" class="btn btn-secondary">Game of Role</a>
                         </div>
-                        <div class="mt-2">
-                            <h5></h5>
-                            <a href="./spotify.html?playing=Playlist" class="btn btn-secondary">Spotify Playlist</a>
+                        <div class="btn-group mt-2" role="group" aria-label="Basic example">
+                            <a href="./spotify.html" class="btn btn-secondary">Spotify Playlist</a>
+                            <a href="./spotify.html?playing=true" class="btn btn-secondary"><i class="fas fa-play fa-fw"></i></a>
                         </div>
                         <div class="mt-2">
                             <button type="button" class="btn btn-secondary" id="settingsButton">Settings</button>
@@ -49,18 +49,22 @@
                                 <h5>Themes available</h5>
                                 <div class="row">
                                     <div class="col-6">
-                                        <img id="mintyImage" src="./assets/themes/minty.png" alt="Minty Theme" class="img-fluid">
+                                        <img id="mintyImage" src="./assets/themes/minty.png" alt="Minty Theme"
+                                            class="img-fluid">
                                     </div>
                                     <div class="col-6">
-                                        <img id="quartzImage" src="./assets/themes/quartz.png" alt="Quartz Theme" class="img-fluid">
+                                        <img id="quartzImage" src="./assets/themes/quartz.png" alt="Quartz Theme"
+                                            class="img-fluid">
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-6">
-                                        <img id="solarImage" src="./assets/themes/solar.png" alt="Solar Theme" class="img-fluid">
+                                        <img id="solarImage" src="./assets/themes/solar.png" alt="Solar Theme"
+                                            class="img-fluid">
                                     </div>
                                     <div class="col-6">
-                                        <img id="vaporImage" src="./assets/themes/vapor.png" alt="Vapor Theme" class="img-fluid">
+                                        <img id="vaporImage" src="./assets/themes/vapor.png" alt="Vapor Theme"
+                                            class="img-fluid">
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-between mt-2">
@@ -75,9 +79,16 @@
                                     <button class="btn btn-success" id="saveThemeButton">Save Theme</button>
                                 </div>
                                 <hr>
-                                <p>Hello there, you can access to the shitty code <a
-                                        href="https://github.com/HaiseB/chromusic" target="_blank">here</a>! &#128526;
-                                </p>
+                                <figure class="text-end">
+                                    <blockquote class="blockquote">
+                                        <p class="mb-0">Hello there, you can access to the shitty code <a
+                                                href="https://github.com/HaiseB/chromusic" target="_blank">here</a>!
+                                            &#128526;</p>
+                                    </blockquote>
+                                    <figcaption class="blockquote-footer">
+                                        <cite title="Source Title">HaiseB</cite>
+                                    </figcaption>
+                                </figure>
                             </div>
                         </div>
                     </div>
