feat(spotify) WIP : add form to choose other playlists

--- a/webPage/index.html
+++ b/webPage/index.html
@@ -76,7 +76,7 @@
                                             <option value="solar">Solar</option>
                                         </select>
                                     </div>
-                                    <button class="btn btn-success" id="saveThemeButton">Save Theme</button>
+                                    <button type="submit" class="btn btn-success" id="saveThemeButton">Save Theme</button>
                                 </div>
                                 <hr>
                                 <figure class="text-end">
