--- a/webPage/spotify.html
+++ b/webPage/spotify.html
@@ -80,8 +80,17 @@
                             </li>
                         </ul>
                         <button type="button" class="btn btn-secondary mt-2" id="settingsButton">Settings</button>
-                            <div id="additionalParams" style="display: none;" class="mt-2 ">
-                            </div>
+                        <div id="additionalParams" style="display: none;" class="mt-2 ">
+                            <form>
+                                <fieldset>
+                                    <div class="form-group">
+                                        <label for="playlistTextarea" class="form-label mt-4">Playlists</label>
+                                        <textarea class="form-control" id="playlistTextarea" rows="31"></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-success mt-2">Save</button>
+                                </fieldset>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
