feat (spotify) : implement changes of iframe called

--- a/webPage/spotify.html
+++ b/webPage/spotify.html
@@ -39,7 +39,7 @@
                             <li class="breadcrumb-item active">Spotify playlists</li>
                         </ol>
                         <h3 class="text-center">iFrame Spotify</h3>
-                        <ul class="list-group">
+                        <ul class="list-group" id="ul-iframe">
                             <li class="list-group-item">Playlists</li>
                             <li class="list-group-item spotify-iframe">
                                 <iframe title="Spotify Embed: Recommendation Playlist"
@@ -87,7 +87,7 @@
                                         <label for="playlistTextarea" class="form-label mt-4">Playlists</label>
                                         <textarea class="form-control" id="playlistTextarea" rows="31"></textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-success mt-2">Save</button>
+                                    <button type="submit" class="btn btn-success mt-2" id="saveButton">Save</button>
                                 </fieldset>
                             </form>
                         </div>
